Migrate to JUnit 5 (#67)
* Bump to junit 5

* Update Test and Assertion import names

* Update BeforeClass annotation to BeforeAll

* Fix exception testing

* Replace temp folders with injected temp dir

* Enable junit 5 tests

* Fix import orders